Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
4.6.0, 4.6.1, 4.6.2, 4.6.3, 4.7.1
-
None
-
cc37d494c2c6ef5768e4bc30cad62f24fee033c3
Description
There is a regression introduced in 4.6.0.
When the auto completion text string is shown, the text cursor is put to the end of the string instead of between the typed text and the auto completion.
The problem doesn't happen in 4.5.3.
QFileDialog doesn't have this problem.